--- a/estatistica/D1AED_Atividade01_checkpoint.ipynb
+++ b/estatistica/D1AED_Atividade01_checkpoint.ipynb
@@ -616,14 +616,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "714b9c56-7f7b-48e5-a18f-7b700b26f1a2",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "714b9c56-7f7b-48e5-a18f-7b700b26f1a2",
-        "outputId": "a4879847-1db2-494a-c9b5-0f5aac879d23"
+        "outputId": "90b7fb7f-8c18-4e4d-c1a9-1e2f85da0440"
       },
       "outputs": [
         {
@@ -671,29 +671,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "f12aa861-813b-4d21-9ff9-40c44e5b4e44",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f12aa861-813b-4d21-9ff9-40c44e5b4e44",
-        "outputId": "e1e75bf5-a2dc-4c54-db37-cff93a7ce417"
+        "outputId": "d4262df3-229f-4567-b3ca-a61a9134f6d0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.9192433407662289\n"
+            "A probabilidade é de 91.92%\n"
           ]
         }
       ],
       "source": [
         "from scipy.stats import norm\n",
         "\n",
-        "probabilidade = norm.cdf(1.4)\n",
-        "print(probabilidade)"
+        "#Primeiro é preciso converter a variável aleatória para uma variável aleatória padronizada utilizando Z = (X-μ)/σ, com X a distância percorrida pelos alunos\n",
+        "\n",
+        "μ = 7.5\n",
+        "σ = 2.5\n",
+        "X = 11\n",
+        "\n",
+        "Z = (X - μ)/σ\n",
+        "\n",
+        "#Da tabela de distribuição normal padrão (cdf do módulo  scipy.stats) temos\n",
+        "\n",
+        "probabilidade = norm.cdf(Z)\n",
+        "\n",
+        "#print(probabilidade)\n",
+        "print(\"A probabilidade é de {:.2f}%\".format(probabilidade*100))"
       ]
     },
     {
@@ -798,21 +810,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "4348835e-3591-402d-9914-d5dd45c04d90",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4348835e-3591-402d-9914-d5dd45c04d90",
-        "outputId": "cdf1702f-98a4-44bd-c349-8d94b8557e8a"
+        "outputId": "395f9135-0d1a-489f-bece-02dc69f5f8ca"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A probabilidade é de 0.0072\n"
+            "A probabilidade é de 0.72%\n"
           ]
         }
       ],
@@ -830,7 +842,8 @@
         "z = (5 - mu_s) / sigma_s\n",
         "p = norm.cdf(z)\n",
         "\n",
-        "print(f\"A probabilidade é de {p:.4f}\")"
+        "#print(f\"A probabilidade é de {p:.4f}\")\n",
+        "print(\"A probabilidade é de {:.2f}%\".format(p*100))"
       ]
     },
     {
@@ -891,50 +904,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "5bc2c021-d856-400a-a65c-054673611253",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5bc2c021-d856-400a-a65c-054673611253",
-        "outputId": "6914c1c8-4691-4061-a1b9-15c0123d7785"
+        "outputId": "cf0e47c0-29b9-4f34-ea92-34fbc330ea90"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "O intervalo de confiança é: (12.729260625343738, 15.270739374656262)\n"
+            "Intervalo de confiança: [12.87, 15.13]\n",
+            "Isso significa que temos 95% de confiança de que a média populacional está entre 12.87 e 15.13 dias.\n",
+            "Como o intervalo inclui os valores de 13 e 15 dias, podemos afirmar que essa amostra fornece evidências de que o tempo de recuperação da população está entre esses valores com um nível de confiança de 95%.\n"
           ]
         }
       ],
       "source": [
-        "from scipy.stats import t\n",
+        "from scipy.stats import norm\n",
         "import math\n",
         "\n",
-        "# média da amostra\n",
-        "x_barra = (13 + 15) / 2\n",
-        "\n",
-        "# desvio padrão da população\n",
-        "s = 2\n",
-        "\n",
-        "# tamanho da amostra\n",
+        "# Dados do problema\n",
+        "desvio_padrao = 2\n",
         "n = 12\n",
+        "x_barra = 14\n",
         "\n",
-        "# nível de confiança desejado\n",
+        "# Intervalo de confiança desejado\n",
         "confianca = 0.95\n",
         "\n",
-        "# graus de liberdade\n",
-        "graus_liberdade = n - 1\n",
+        "# Valor crítico de z\n",
+        "valor_critico = norm.ppf((1 + confianca) / 2)\n",
         "\n",
-        "# valor crítico t\n",
-        "t_critico = t.ppf(confianca + (1 - confianca) / 2, graus_liberdade)\n",
+        "# Erro padrão da média\n",
+        "erro_padrao = desvio_padrao / math.sqrt(n)\n",
         "\n",
-        "# intervalo de confiança\n",
-        "intervalo_confianca = (x_barra - t_critico * (s / math.sqrt(n)), x_barra + t_critico * (s / math.sqrt(n)))\n",
+        "# Intervalo de confiança\n",
+        "limite_inferior = x_barra - valor_critico * erro_padrao\n",
+        "limite_superior = x_barra + valor_critico * erro_padrao\n",
         "\n",
-        "print(f'O intervalo de confiança é: {intervalo_confianca}')"
+        "print(\"Intervalo de confiança: [{:.2f}, {:.2f}]\".format(limite_inferior, limite_superior))\n",
+        "print(\"Isso significa que temos {:.0f}% de confiança de que a média populacional está entre {:.2f} e {:.2f} dias.\\nComo o intervalo inclui os valores de 13 e 15 dias, podemos afirmar que essa amostra fornece evidências de que o tempo de recuperação da população está entre esses valores com um nível de confiança de {:.0f}%.\".format(confianca*100, limite_inferior, limite_superior, confianca*100))"
       ]
     },
     {
