--- a/estatistica/D1AED_Atividade01_checkpoint.ipynb
+++ b/estatistica/D1AED_Atividade01_checkpoint.ipynb
@@ -616,14 +616,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "id": "714b9c56-7f7b-48e5-a18f-7b700b26f1a2",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "714b9c56-7f7b-48e5-a18f-7b700b26f1a2",
-        "outputId": "90b7fb7f-8c18-4e4d-c1a9-1e2f85da0440"
+        "outputId": "c27d4f12-b668-42f2-d96f-f91551ff8070"
       },
       "outputs": [
         {
@@ -636,6 +636,13 @@
       ],
       "source": [
         "import math\n",
+        "# Podemos aproximar a distribuição binomial pela distribuição de Poisson com parâmetro lambda = n * p quando n é grande e p é pequeno.\n",
+        "# Neste caso, n = 200 e p = 0.006, e n * p = 1.2, que é maior do que 1.\n",
+        "# Portanto, podemos usar a distribuição de Poisson com lambda = 1.2 como uma aproximação.\n",
+        "# A probabilidade de faltar exatamente k chocolates em uma caixa é dada pela fórmula da distribuição de Poisson:\n",
+        "# P(k; lambda) = (e^(-lambda) * lambda^k) / k!\n",
+        "# Assim, a probabilidade de uma caixa estar faltando no máximo dois chocolates é dada por:\n",
+        "# P(0; 1.2) + P(1; 1.2) + P(2; 1.2)\n",
         "\n",
         "lam = 1.2\n",
         "\n",
