--- a/estatistica/D1AED_Atividade01_checkpoint.ipynb
+++ b/estatistica/D1AED_Atividade01_checkpoint.ipynb
@@ -479,30 +479,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "7f11881b-dee1-4f53-a2da-c68623fc20f9",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7f11881b-dee1-4f53-a2da-c68623fc20f9",
-        "outputId": "835a95fb-bcc8-4de8-ac70-09a3e8911047"
+        "outputId": "021d84bf-bf0a-4fa9-8928-13e627432e97"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A probabilidade de haver mais de 2 acidentes em uma semana é de 0.00\n"
+            "A probabilidade de ocorrer mais de 2 acidentes em uma semana é: 0.0144\n"
           ]
         }
       ],
       "source": [
-        "media = 0.5\n",
-        "semana = 1\n",
-        "probabilidade = 1 - np.sum(np.random.poisson(media, semana) < 3) / semana\n",
+        "# P(X > 2) = 1 - P(X <= 2)\n",
         "\n",
-        "print(f\"A probabilidade de haver mais de 2 acidentes em uma semana é de {probabilidade:.2f}\")"
+        "from scipy.stats import poisson\n",
+        "\n",
+        "# parâmetro lambda da distribuição de Poisson\n",
+        "lmbda = 0.5\n",
+        "\n",
+        "# probabilidade de ocorrer mais de 2 acidentes em uma semana\n",
+        "prob = 1 - poisson.cdf(2, lmbda)\n",
+        "\n",
+        "print(\"A probabilidade de ocorrer mais de 2 acidentes em uma semana é:\", round(prob, 4))\n",
+        "\n"
       ]
     },
     {
