--- a/estatistica/D1AED_Atividade01_checkpoint.ipynb
+++ b/estatistica/D1AED_Atividade01_checkpoint.ipynb
@@ -918,23 +918,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 32,
       "id": "5bc2c021-d856-400a-a65c-054673611253",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5bc2c021-d856-400a-a65c-054673611253",
-        "outputId": "cf0e47c0-29b9-4f34-ea92-34fbc330ea90"
+        "outputId": "07c8b7d7-8ad5-4c0c-e4a7-baafdbfdba60"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Intervalo de confiança: [12.87, 15.13]\n",
-            "Isso significa que temos 95% de confiança de que a média populacional está entre 12.87 e 15.13 dias.\n",
-            "Como o intervalo inclui os valores de 13 e 15 dias, podemos afirmar que essa amostra fornece evidências de que o tempo de recuperação da população está entre esses valores com um nível de confiança de 95%.\n"
+            "Intervalo de confiança: [13.00, 15.00]\n",
+            "Isso significa que temos 92% de confiança de que a média populacional está entre 13.00 e 15.00 dias.\n",
+            "\n"
           ]
         }
       ],
@@ -942,26 +942,27 @@
         "from scipy.stats import norm\n",
         "import math\n",
         "\n",
-        "# Dados do problema\n",
-        "desvio_padrao = 2\n",
+        "# Dados de input\n",
         "n = 12\n",
-        "x_barra = 14\n",
+        "mean = (13 + 15) / 2\n",
+        "std = 2\n",
+        "limite_inferior = 13\n",
+        "limite_superior = 15\n",
         "\n",
-        "# Intervalo de confiança desejado\n",
-        "confianca = 0.95\n",
         "\n",
-        "# Valor crítico de z\n",
-        "valor_critico = norm.ppf((1 + confianca) / 2)\n",
+        "#  Considerando que o intervalo de confiança é dado por:\n",
+        "# limite_inferior = mean + (z_score * (std /sqrt(n)))\n",
+        "# limite_inferior = mean - (z_score * (std/sqrt(n)))\n",
         "\n",
-        "# Erro padrão da média\n",
-        "erro_padrao = desvio_padrao / math.sqrt(n)\n",
+        "z_score = (limite_inferior - mean) * math.sqrt(n) / std\n",
         "\n",
-        "# Intervalo de confiança\n",
-        "limite_inferior = x_barra - valor_critico * erro_padrao\n",
-        "limite_superior = x_barra + valor_critico * erro_padrao\n",
+        "# Para o valor de z_score encontrado, buscar na tabela Z-score o nível de significancia alpha = 2*0.0418, ou utilizar a função de distribuição acumulada cdf temos:\n",
+        "\n",
+        "alpha_ = 2 * norm.cdf(z_score)\n",
+        "conf_level = 1 - alpha_\n",
         "\n",
         "print(\"Intervalo de confiança: [{:.2f}, {:.2f}]\".format(limite_inferior, limite_superior))\n",
-        "print(\"Isso significa que temos {:.0f}% de confiança de que a média populacional está entre {:.2f} e {:.2f} dias.\\nComo o intervalo inclui os valores de 13 e 15 dias, podemos afirmar que essa amostra fornece evidências de que o tempo de recuperação da população está entre esses valores com um nível de confiança de {:.0f}%.\".format(confianca*100, limite_inferior, limite_superior, confianca*100))"
+        "print(\"Isso significa que temos {:.0f}% de confiança de que a média populacional está entre {:.2f} e {:.2f} dias.\\n\".format(conf_level*100, limite_inferior, limite_superior))"
       ]
     },
     {
