Primeiras alterações do Projeto Interdisciplinar

--- a/projeto_interdisciplinar_1/projeto/projeto_interdisciplinar_1 - Evandro.ipynb
+++ b/projeto_interdisciplinar_1/projeto/projeto_interdisciplinar_1 - Evandro.ipynb
@@ -8,7 +8,7 @@
     "id": "l_LulNCC8z96"
    },
    "source": [
-    "# **Atividade 2: Beer Consumption - Sao Paulo**\n",
+    "# **Projeto Interdisciplinar: Wine Dataset**\n",
     "## D1DAE: Análise Estatística para Ciência de Dados    \n",
     "## IFSP Campinas"
    ]
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -38,7 +38,8 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.datasets import load_wine"
    ]
   },
   {
@@ -59,7 +60,7 @@
    "source": [
     "O arquivo considerando neste notebook encontra-se aqui;\n",
     "\n",
-    "https://www.kaggle.com/datasets/dongeorge/beer-consumption-sao-paulo"
+    "https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_wine.html"
    ]
   },
   {
@@ -71,6 +72,21 @@
    },
    "source": [
     "### 1.1. Importando o dataset e mostrando informações básicas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wine = load_wine(as_frame=True)\n",
+    "\n",
+    "# Converter o objeto Bunch em um DataFrame do Pandas\n",
+    "df = wine.data\n",
+    "\n",
+    "# Salvar o DataFrame como um arquivo CSV\n",
+    "df.to_csv('datasets/wine_dataset.csv', index=False)\n"
    ]
   },
   {
