Adição dos nomes

--- a/projeto_interdisciplinar_1/projeto/Projeto Interdisciplinar.ipynb
+++ b/projeto_interdisciplinar_1/projeto/Projeto Interdisciplinar.ipynb
@@ -7,7 +7,11 @@
    "source": [
     "# **Projeto Interdisciplinar: Wine Dataset**\n",
     "## D1DAE: Análise Estatística para Ciência de Dados    \n",
-    "## IFSP Campinas"
+    "## IFSP Campinas\n",
+    "#### **Grupo:**\n",
+    "- Evandro Costa Ferreira (CP3021947)\n",
+    "- Jaqueline Jana da Silva (CP3021891)\n",
+    "- João Pedro de Oliveira Ferreira (CP3021696)"
    ]
   },
   {
