Alterações na apresentação

--- a/projeto_interdisciplinar_1/projeto/Projeto Interdisciplinar.ipynb
+++ b/projeto_interdisciplinar_1/projeto/Projeto Interdisciplinar.ipynb
@@ -604,6 +604,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 141 entries, 0 to 140\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   alcohol                       141 non-null    float64\n",
+      " 1   malic_acid                    141 non-null    float64\n",
+      " 2   ash                           141 non-null    float64\n",
+      " 3   alcalinity_of_ash             141 non-null    float64\n",
+      " 4   magnesium                     141 non-null    float64\n",
+      " 5   total_phenols                 141 non-null    float64\n",
+      " 6   flavanoids                    141 non-null    float64\n",
+      " 7   nonflavanoid_phenols          141 non-null    float64\n",
+      " 8   proanthocyanins               141 non-null    float64\n",
+      " 9   color_intensity               141 non-null    float64\n",
+      " 10  hue                           141 non-null    float64\n",
+      " 11  od280/od315_of_diluted_wines  141 non-null    float64\n",
+      " 12  proline                       141 non-null    float64\n",
+      " 13  target                        141 non-null    int32  \n",
+      "dtypes: float64(13), int32(1)\n",
+      "memory usage: 15.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "treino.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Contando os valores nulos em todo o DataFrame**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este dataset tem 14 atributos/colunas e 141 linhas/amostras das quais, 0 são linhas/amostras nulas.\n",
+      "Logo, temos uma inconsistência de 0.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_valores_nulos = treino.isnull().sum().sum()\n",
+    "\n",
+    "# Exibindo o resultado\n",
+    "\n",
+    "print('Este dataset tem {:.0f} atributos/colunas e {:.0f} linhas/amostras das quais, {:.0f} são linhas/amostras nulas.\\nLogo, temos uma inconsistência de {:.2f}%'.format(treino.shape[1], treino.shape[0], total_valores_nulos, (total_valores_nulos/df.shape[0])*100 ))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -681,73 +748,6 @@
    "metadata": {},
    "source": [
     "## 📊 1. Análise Exploratória"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 141 entries, 0 to 140\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column                        Non-Null Count  Dtype  \n",
-      "---  ------                        --------------  -----  \n",
-      " 0   alcohol                       141 non-null    float64\n",
-      " 1   malic_acid                    141 non-null    float64\n",
-      " 2   ash                           141 non-null    float64\n",
-      " 3   alcalinity_of_ash             141 non-null    float64\n",
-      " 4   magnesium                     141 non-null    float64\n",
-      " 5   total_phenols                 141 non-null    float64\n",
-      " 6   flavanoids                    141 non-null    float64\n",
-      " 7   nonflavanoid_phenols          141 non-null    float64\n",
-      " 8   proanthocyanins               141 non-null    float64\n",
-      " 9   color_intensity               141 non-null    float64\n",
-      " 10  hue                           141 non-null    float64\n",
-      " 11  od280/od315_of_diluted_wines  141 non-null    float64\n",
-      " 12  proline                       141 non-null    float64\n",
-      " 13  target                        141 non-null    int32  \n",
-      "dtypes: float64(13), int32(1)\n",
-      "memory usage: 15.0 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "treino.info()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Contando os valores nulos em todo o DataFrame**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Este dataset tem 14 atributos/colunas e 141 linhas/amostras das quais, 0 são linhas/amostras nulas.\n",
-      "Logo, temos uma inconsistência de 0.00%\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_valores_nulos = treino.isnull().sum().sum()\n",
-    "\n",
-    "# Exibindo o resultado\n",
-    "\n",
-    "print('Este dataset tem {:.0f} atributos/colunas e {:.0f} linhas/amostras das quais, {:.0f} são linhas/amostras nulas.\\nLogo, temos uma inconsistência de {:.2f}%'.format(treino.shape[1], treino.shape[0], total_valores_nulos, (total_valores_nulos/df.shape[0])*100 ))"
    ]
   },
   {
@@ -3064,7 +3064,7 @@
     "\n",
     "# Calcular a acurácia das previsões\n",
     "accuracy_tree = accuracy_score(teste[vars_resp], y_pred_tree)\n",
-    "print(\"Acurácia no Teste - Árvode de Decisão:\", accuracy_tree.round(5))"
+    "print(\"Acurácia no Teste - Árvore de Decisão:\", accuracy_tree.round(5))"
    ]
   },
   {
