--- a/projeto_interdisciplinar_1/projeto/Projeto Interdisciplinar.ipynb
+++ b/projeto_interdisciplinar_1/projeto/Projeto Interdisciplinar.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "[178 rows x 14 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "max               14.83     14.83     13.67     14.34"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "max                5.80      3.99      5.80      5.51"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
        "max                3.23      2.87      3.23      2.86"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
        "max               30.00     22.50     30.00     25.50"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
        "max              162.00    132.00    162.00    123.00"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
        "max                3.88      3.88      3.52      2.80"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1797,7 @@
        "max                5.08      3.93      5.08      1.57"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
        "max                0.63      0.50      0.63      0.63"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2107,9 +2107,17 @@
        "max                3.58      2.96      3.58      2.70"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -2119,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2624,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2739,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2778,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2890,7 +2898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2923,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2946,7 +2954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3030,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3066,7 +3074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3157,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3196,7 +3204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3234,7 +3242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3261,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3302,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3343,7 +3351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3381,7 +3389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3420,7 +3428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3445,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3482,7 +3490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
