Adicionando um breve comentário no início do notebook

--- a/projeto_interdisciplinar_1/projeto/Projeto_Interdisciplinar.ipynb
+++ b/projeto_interdisciplinar_1/projeto/Projeto_Interdisciplinar.ipynb
@@ -27,6 +27,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As análises abaixo se referem ao Wine Dataset, a base possui 13 variáveis que são características de um determinado vinho e um target categórico que pode receber valor 0, 1 ou 2, cada categoria representa um produtor diferente, caracterizando uma classificação multiclasse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "T-TaZj8mvkW7"
    },
